samples/_failures_safe/1761418115_4aa5ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33dc7828.c: In function ‘main’:
./samples/SAFE/__tmp_33dc7828.c:133:5: error: expected declaration or statement at end of input
  133 |     if (mat1.data == NULL) {
      |     ^~
./samples/SAFE/__tmp_33dc7828.c:133:5: error: expected declaration or statement at end of input
